create new wrapper about us

--- a/hw_7/index.html
+++ b/hw_7/index.html
@@ -69,7 +69,7 @@
                 <h2>Наши квартиры</h2>
             </div>
             <div class="rooms">
-                <div>
+                <div class="wrapper-one">
                     <div class="first-street">
                         <div class="rooms-img-one"></div>
                     </div>
@@ -79,17 +79,100 @@
                     </div>
                     <div class="location">
                         <div class="location-svg"></div>
+                        <p>Березники, ул. Юбилейная 108</p>
+                    </div>
+                    <button class="rooms-btn">Подробнее</button>
+                </div>
+                <div class="wrapper-two">
+                    <div class="second-street">
+                        <div class="rooms-img-two"></div>
+                    </div>
+                    <div class="txt-one">
+                        <h3>Трёхкомнатная квартира</h3>
+                        <p>Сутки: <span class="price">1300 ₽</span></p>
+                    </div>
+                    <div class="location">
+                        <div class="location-svg"></div>
+                        <p>Березники, ул. Гагарина 89</p>
+                    </div>
+                    <button class="rooms-btn">Подробнее</button>
+                </div>
+                <div class="wrapper-three">
+                    <div class="third-street">
+                        <div class="rooms-img-three"></div>
+                    </div>
+                    <div class="txt-one">
+                        <h3>Двухкомнатная квартира</h3>
+                        <p>Сутки: <span class="price">1700 ₽</span></p>
+                    </div>
+                    <div class="location">
+                        <div class="location-svg"></div>
                         <p>Березники, ул. Власова 14</p>
+                    </div>
+                    <button class="rooms-btn">Подробнее</button>
+                </div>
+                <div class="wrapper-ащгк">
+                    <div class="fourth-street">
+                        <div class="rooms-img-four"></div>
+                    </div>
+                    <div class="txt-one">
+                        <h3>Пятикомнатная квартира</h3>
+                        <p>Сутки: <span class="price">4100 ₽</span></p>
+                    </div>
+                    <div class="location">
+                        <div class="location-svg"></div>
+                        <p>Березники, ул. Шмидта 10</p>
                     </div>
                     <button class="rooms-btn">Подробнее</button>
                 </div>
 
             </div>
+
             <div>
                 <button class="apartments-btn">Смотреть все квартиры</button>
             </div>
         </section>
-        <section class="about-us"></section>
+        <section class="about-us">
+            <div class="about-txt">
+                <h2>О нас</h2>
+                <p>Сегодня "Домашняя гостиница" - одна из крупнейших в Пермском крае гостиничных сетей, динамично расширяющая географический охват и повышающая качество сервиса.</p>
+            </div>
+            <div class="stats">
+                <div class="group-deal">
+                    <div class="deal-svg"></div>
+                    <div class="group-txt">
+                        <h2>40+</h2>
+                        <p>Клиентов</p>
+                    </div>
+                </div>
+                <div class="group-review">
+                    <div class="review-svg"></div>
+                    <div class="review-txt">
+                        <h2>100+</h2>
+                        <p>Отзывов</p>
+                    </div>
+                </div>
+                <div class="group-home">
+                    <div class="home-svg"></div>
+                    <div class="home-txt">
+                        <h2>9</h2>
+                        <p>Квартир</p>
+                    </div>
+                </div>
+
+            </div>
+            <div>
+                <div>
+                    <hr class="horizontal-one">
+                </div>
+                <!-- <div>
+                    <hr class="horizontal-two">
+                </div>
+                <div>
+                    <hr class="horizontal-three">
+                </div> -->
+            </div>
+        </section>
         <section class="contacts"></section>
         <section class="reviews"></section>
         <section class="write"></section>
